# pico-serprog

./: .gitignore  CMakeLists.txt  README.md  main.c  spi.h
.github/workflows/: build.yaml
pio/: pio_spi.c  pio_spi.h  spi.pio
